--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script src=“https://maps.googleapis.com/maps/api/js?key=AIzaSyCYtYxEyYJHXnD7Fe0QommruR-0PWOCah0”></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
