--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html> -->
+!doctype html
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -22,7 +22,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script src=“https://maps.googleapis.com/maps/api/js?key=AIzaSyBrqha1XXhjM1iwut2S-2ez7iT5QZx0vVE”></script>
+    <script async defer src=“https://maps.googleapis.com/maps/api/js?key=AIzaSyBrqha1XXhjM1iwut2S-2ez7iT5QZx0vVE”></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
